pages/static/pages/css/pages.css
/* ... */
.change-list-pages .insert a.left  {
    background-position:   5px 0;
}
.change-list-pages .insert a.right                            { background-position: -10px 0; }
.change-list-pages .insert a.first-child                      { background-position: -25px 0; width: 14px; }
.change-list-pages .insert-add tr:hover .insert a.left,
.change-list-pages .insert-add .insert a.left:hover           { background-position:   5px -21px; }
.change-list-pages .insert-add tr:hover .insert a.right,
.change-list-pages .insert-add .insert a.right:hover          { background-position: -10px -21px; }
.change-list-pages .insert-add tr:hover .insert a.first-child,
.change-list-pages .insert-add .insert a.first-child:hover    { background-position: -25px -21px; }
.change-list-pages .insert-move tr:hover .insert a.left,
.change-list-pages .insert-move .insert a.left:hover          { background-position:   5px -42px; }
.change-list-pages .insert-move tr:hover .insert a.right,
.change-list-pages .insert-move .insert a.right:hover         { background-position: -10px -42px; }
.change-list-pages .insert-move tr:hover .insert a.first-child,
.change-list-pages .insert-move .insert a.first-child:hover   { background-position: -25px -42px; }
.change-list-pages .insert .help {
    top: -20px;
}
.change-list-pages .insert a.cancellink {
    display: none;
    font-weight: normal;
}
.change-list-pages .insert-add .selected .insert a.cancellink {
    display: block;
    width: auto;
    height: auto;
    margin: 4px 5px;
    padding: 0 5px;
    background: none;
}
.change-list-pages .insert a.cancellink .help {
    top: -24px;
}
.change-list-pages .insert-loading {
    position: absolute;
    left: 0; top: -1px;
    font-size: 16px;
}

/* Languages */
.change-list-pages th.language-cell {
    padding-right: 10px;
}
.change-list-pages .language-cell {
    width: 1%;
    white-space: nowrap;
    padding: 5px 0 5px 10px;
}
.change-list-pages .language-cell ul {
    margin: 0;
    padding: 0;
}
.change-list-pages .language-cell li {
    display: inline;
    list-style: none;
    padding: 0
}
.change-list-pages .language-cell .changelink {
    margin: 0 4px;
    padding: 0 12px 0 0;
    font-weight: bold;
    text-transform: uppercase;
    background: none;
}
.change-list-pages .language-cell .changelink:hover {
    background: url(../images/icons/edit.gif) right 0.2em no-repeat;
}
.change-list-pages .language-cell .addlang {
    color: #ccc;
}
.change-list-pages .language-cell .addlang:hover {
    color: #007418;
    background: url(../images/icons/add.gif) right 0.2em no-repeat;
}

/* Publication status */
.change-list-pages .publish-cell {
    width: 1%;
    white-space: nowrap;
    padding: 0 20px 0 10px;
}
.change-list-pages .publish-cell .box {
    width: 130px;
}

.change-list-pages th.publish-cell {
    padding: 5px 10px;
}
.change-list-pages .publish-cell img {
    width: 10px;
    height: 10px;
}
.change-list-pages .publish-cell .publish-select {
    margin: 2px;
    padding: 1px;
}

/* Publication status */
.change-list-pages .template-cell {
    width: 1%;
    white-space: nowrap;
    padding: 5px 10px;
}

/* autor */
.change-list-pages .author-cell {
    width: 1%;
    white-space: nowrap;
    padding: 5px 10px;
}

/* change-form page =========================================== */

/* Global */
.grp-change-form .sidebar,
.change-form .sidebar {
    width: 305px;
    float: left;
    display: inline; /* IE6 fix */
    margin-right: 1em;
}
html[dir=rtl] .grp-change-form .sidebar,
html[dir=rtl] .change-form .sidebar {
    float:right;
    margin-left:1em;
    margin-right: 0;
}

.change-form .sidebar .revisions {
    margin-left: 100px;
    margin-top: 2px;
}

.grp-change-form .grp-module:not(.grp-submit-row) {
    min-width: 0;
}

.grp-change-form label,
.change-form label {
    width: 90px; /* IE6 fix */
    line-height: 20px;
}
.grp-change-form .sidebar input,
.grp-change-form .sidebar select,
.change-form .sidebar input,
.change-form .sidebar select {
    width: 148px;
}

.grp-change-form .sidebar p.help,
.grp-change-form .sidebar .form-row p.help ,
.change-form .sidebar p.help,
.change-form .sidebar .form-row p.help {
    margin-left: 0;
    padding: 2px 0 0;
}
.grp-change-form .sidebar div.description,
.change-form .sidebar div.description {
    margin: 5px;
}
.grp-change-form .field-box
.change-form .field-box {
    position: relative;
    float: none;
    margin: 0;
}

.change-form .field-box {
    display:block;
}

/* Title */
.module-general .title label {
    float: none;
    padding-top: 0;
}
.module-general .title input {
    width: 248px;
    font-size: 16px;
}

/* Status */

.module-general #id_status {
    width:140px;
}

.module-general .status img, .module-general .field-status img {
    width: 10px;
    height: 10px;
    margin-left:4px;
}

html[dir=rtl] .module-general .field-status img {
    margin-left:0; margin-right:4px;
}

/* Languages */
.grp-change-form .language ul,
.change-form .field-language ul {
    margin: 0;
    padding: 3px 0;
}
.change-form .field-language li {
    display: inline;
    list-style: none;
    margin: 0;
    padding: 0
}
.grp-change-form .module-options .language .editlink,
.grp-change-form .module-options .language .addlink,
.grp-change-form .module-options .language .current,
.change-form .field-language .editlink,
.change-form .field-language .addlink,
.change-form .field-language .current {
    float: left;
    display: inline; /* IE6 fix */
    margin: 0 6px 0 0;
    padding: 0 12px 0 0;
    line-height: 16px;
    font-weight: bold;
    text-transform: uppercase;
    background: none;
}
.grp-change-form .module-options .language .editlink:hover,
.change-form .language .editlink:hover {
    background: url(../images/icons/edit.gif) right 0.2em no-repeat;
}
.grp-grp-change-form .module-options .language .addlink,
.change-form .field-language .addlink {
    color: #ccc;
}
/* ... */

